--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,10 @@ body{
 	border-radius: 1.5rem;
 	overflow: hidden; 
 }
+.input-username{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    padding: .5rem 16rem .5rem 1.5rem;
+}
