--- a/styles.css
+++ b/styles.css
@@ -128,5 +128,28 @@ body{
 .repo{
     width: 100%;
     display: flex;
-
+    justify-content: center;
+    flex-direction: column;
+    padding: 5rem 2rem;
+    scroll-behavior: auto;
+}
+.repo h2{
+	font-size: 2.2rem;
+	margin-bottom: 1.5rem;
+}
+.repo-details{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.repo .item{
+	width: 47%;
+	border: 1px solid #fff;
+	border-radius: .5rem;
+	margin-bottom: 1.5rem;
+	padding: 1rem;
+}
+.repo .repo-name{
+	font-size: 1.2rem;
+	margin-bottom: 1rem;
 }
