--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,43 @@ body{
 	font-size: 1.2rem;
 	margin-bottom: 1rem;
 }
+/* media queries */
+@media (max-width: 800px) {
+	.container {
+		padding: 9rem;
+	}
+	.row{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		width: 60rem;
+		box-shadow: 0 0 1rem #fff;
+		margin-top: 4rem;
+	}
+	.row .user-info{
+		width: 100%;
+		padding: 2rem;
+	}
+	
+}
+
+@media (max-width: 400px) {
+	 .row{
+		width: 35rem;
+		margin-left: .2rem;
+	 }
+	.repo .repo-details .item{
+		width: 90%;
+		margin:auto;
+		margin-bottom: 1rem;
+	}
+	.repo .repo-name{
+		font-size: 1.3rem;
+		margin-bottom: 1.8rem;
+	}
+	.input-wrapper{
+		width: 35rem;
+		margin-top: -5rem;
+	}
+}
