--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html{
     font-size: 0.625rem;
 }
 body{
-    background-color: #acacac;
+    background-color: blue;
     color: #fff; 
 }
 .container{
@@ -120,12 +120,25 @@ body{
 .info-display-div .visit-user{
     margin: 2rem 0 2rem 0;
 }
-.info-display-div .repo{
+.info-display-div .repos{
     width: 100%;
+}
+.visit-user{
+	text-decoration: none;
+	list-style: none;
+	background-color: #130f40;
+	color: #fff;
+	padding: 1rem;
+	cursor: pointer;
+	letter-spacing: .1rem;
+	transition: all .5s ease;
+}
+.visit-user:hover{
+	background-color: #54a0ff;
 }
 
 /* repository section design */
-.repo{
+.repos{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -133,7 +146,7 @@ body{
     padding: 5rem 2rem;
     scroll-behavior: auto;
 }
-.repo h2{
+.repos h2{
 	font-size: 2.2rem;
 	margin-bottom: 1.5rem;
 }
@@ -142,14 +155,14 @@ body{
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
-.repo .item{
+.repos .item{
 	width: 47%;
 	border: 1px solid #fff;
 	border-radius: .5rem;
 	margin-bottom: 1.5rem;
 	padding: 1rem;
 }
-.repo .repo-name{
+.repos .repo-name{
 	font-size: 1.2rem;
 	margin-bottom: 1rem;
 }
@@ -158,7 +171,7 @@ body{
 	.container {
 		padding: 9rem;
 	}
-	.row{
+	.info-display-div{
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -167,7 +180,7 @@ body{
 		box-shadow: 0 0 1rem #fff;
 		margin-top: 4rem;
 	}
-	.row .user-info{
+	.info-display-div .user-info{
 		width: 100%;
 		padding: 2rem;
 	}
@@ -175,20 +188,20 @@ body{
 }
 
 @media (max-width: 400px) {
-	 .row{
+	 .info-display-div{
 		width: 35rem;
 		margin-left: .2rem;
 	 }
-	.repo .repo-details .item{
+	.repos .repo-details .item{
 		width: 90%;
 		margin:auto;
 		margin-bottom: 1rem;
 	}
-	.repo .repo-name{
+	.repos .repo-name{
 		font-size: 1.3rem;
 		margin-bottom: 1.8rem;
 	}
-	.input-wrapper{
+	.search-wrapper{
 		width: 35rem;
 		margin-top: -5rem;
 	}
