--- a/styles.css
+++ b/styles.css
@@ -181,17 +181,24 @@ body{
 .repo-name{
     font-size: 1.2rem;
 }
-/* .repos .items{
-	width: 47%;
+.repos .items{
+	width: 95%;
 	border: 1px solid #fff;
 	border-radius: .5rem;
 	margin-bottom: 1.5rem;
 	padding: 1rem;
-} */
+}
 .repos .repo-name{
 	font-size: 1.2rem;
 	margin-bottom: 1rem;
 }
+/* .repo-details .info-fork .info-star .info-size{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin: 5rem;
+} */
 /* media queries */
 @media (max-width: 800px) {
 	.container {
