--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,27 @@ body{
 	}
 	
 }
+.card {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	background-color: white;
+	color: #000;
+	border: 1px solid #ccc;
+	padding: 20px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	z-index: 1000;
+	display: none;
+	text-align: left;
+}
+  
+.hidden {
+	display: none;
+}
+  
+.visible {
+	display: block;
+}
 
 @media (max-width: 400px) {
 	 .info-display-div{
