--- a/styles.css
+++ b/styles.css
@@ -310,3 +310,12 @@ body{
 		margin-top: -5rem;
 	}
 }
+@media screen and (max-width: 800px) {
+	.card {
+	  top: 10px;
+	  left: 10px;
+	  right: unset;
+	  width: calc(100% - 20px);
+	  max-width: 300px;
+	}
+}
