--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,68 @@ body{
 }
 
 /* Media queries for mobile devices */
-@media (max-width: 400px) {
+@media only screen and (max-width: 600px) {
+	.container {
+	  padding: 2rem;
+	}
+  
+	.search-wrapper {
+	  width: 100%;
+	  margin-bottom: 1rem;
+	}
+  
+	.input-username {
+	  padding: .5rem 10rem .5rem 1.5rem;
+	}
+  
+	.btn {
+	  width: 10rem;
+	  font-size: 1.2rem;
+	}
+  
+	.info-display-div {
+	  width: 100%;
+	  margin-top: 2rem;
+	  padding: 2rem;
+	}
+  
+	.user-info {
+	  padding: 1rem;
+	}
+  
+	.repos .repo-details .items {
+	  width: 100%;
+	}
+  
+	.repo-name h3 {
+	  font-size: 1rem;
+	  margin-bottom: 1rem;
+	}
+  
+	.visit-user a {
+	  padding: 0.8rem;
+	}
+  
+	.developer-photo {
+	  width: 30px;
+	  height: 30px;
+	}
+  
+	.card {
+	  position: fixed;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%);
+	  width: 90%;
+	  max-width: 300px;
+	  animation: slideIn 5s forwards; /* Add animation for card sliding in */
+	}
+  
+	.progress-bar {
+	  display: none; /* Hide progress bar on mobile */
+	}
+}
+/* @media (max-width: 400px) {
     .info-display-div {
         width: 35rem;
         margin-left: .2rem;
@@ -315,7 +376,7 @@ body{
         width: calc(100% - 20px);
         max-width: 300px;
     }
-}
+} */
 
 /* @media (max-width: 800px) {
 	.container {
